fix up footer link spacing

--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -42,7 +42,7 @@ footer {
     color: $light_gray;
     a{
       display: inline-block;
-      margin: 0 2em;
+      margin: 0 2.5em;
     }
   }
 }
